# OSDL-Heavy

./: Makefile.am  Makefile.cross  README.md
src/code/: Makefile.am  Makefile.cross  OSDL.h  OSDLConfig.h  OSDLConfigForNintendoDS.h  OSDLConfigForWindows.h
src/code/audio/: Makefile.am  Makefile.cross  OSDLAudible.cc  OSDLAudible.h  OSDLAudio.cc  OSDLAudio.h  OSDLAudioChannel.cc  OSDLAudioChannel.h  OSDLAudioCommon.h  OSDLAudioIncludes.h  OSDLMusic.cc  OSDLMusic.h  OSDLMusicManager.cc  OSDLMusicManager.h  OSDLSound.cc  OSDLSound.h
src/code/basic/: Makefile.am  Makefile.cross  OSDLARM7Base.c  OSDLARM7Base.h  OSDLARM7Codes.h  OSDLBasic.cc  OSDLBasic.h  OSDLBasicIncludes.h  OSDLCDROMDrive.cc  OSDLCDROMDrive.h  OSDLCDROMDriveHandler.cc  OSDLCDROMDriveHandler.h  OSDLCommandManager.cc  OSDLCommandManager.h  OSDLDocMainPage.h  OSDLDocMainPage.h.in  OSDLEmbeddedDirectory.cc  OSDLEmbeddedDirectory.h  OSDLEmbeddedFile.cc  OSDLEmbeddedFile.h  OSDLEmbeddedFileSystemManager.cc  OSDLEmbeddedFileSystemManager.h  OSDLEmbeddedFilesystem.cc  OSDLException.cc  OSDLException.h  OSDLFileTags.cc  OSDLFileTags.h  OSDLGUI.cc  OSDLGUI.h  OSDLHeaderVersion.cc  OSDLHeaderVersion.cc.in  OSDLHeaderVersion.h  OSDLHeaderVersion.h.in  OSDLIPCCommands.h  OSDLIncludeCorrecter.h  OSDLTestException.cc  OSDLTestException.h  OSDLTypes.h  OSDLUtils.cc  OSDLUtils.h
src/code/data/: Makefile.am  OSDLDataCommon.cc  OSDLDataCommon.h  OSDLDataIncludes.h  OSDLResourceManager.cc  OSDLResourceManager.h
src/code/engine/: Makefile.am  Makefile.cross  OSDLActiveObject.cc  OSDLActiveObject.h  OSDLBoundingBox.cc  OSDLBoundingBox.h  OSDLBoundingBox2D.cc  OSDLBoundingBox2D.h  OSDLCircleBoundingBox.cc  OSDLCircleBoundingBox.h  OSDLEngineCommon.cc  OSDLEngineCommon.h  OSDLEngineIncludes.h  OSDLModel.cc  OSDLModel.h  OSDLMultimediaRenderer.cc  OSDLMultimediaRenderer.h  OSDLPeriodicSlot.cc  OSDLPeriodicSlot.h  OSDLPeriodicalActiveObject.cc  OSDLPeriodicalActiveObject.h  OSDLProgrammedActiveObject.cc  OSDLProgrammedActiveObject.h  OSDLRenderer.cc  OSDLRenderer.h  OSDLScheduler.cc  OSDLScheduler.h  OSDLStandardRenderer.cc  OSDLStandardRenderer.h  OSDLWorldObject.cc  OSDLWorldObject.h
src/code/events/: Makefile.am  Makefile.cross  OSDLClassicalJoystick.cc  OSDLClassicalJoystick.h  OSDLController.cc  OSDLController.h  OSDLEvents.cc  OSDLEvents.h  OSDLEventsCommon.h  OSDLEventsIncludes.h  OSDLInputDevice.cc  OSDLInputDevice.h  OSDLInputDeviceHandler.cc  OSDLInputDeviceHandler.h  OSDLJoystick.cc  OSDLJoystick.h  OSDLJoystickCommon.cc  OSDLJoystickCommon.h  OSDLJoystickHandler.cc  OSDLJoystickHandler.h  OSDLKeyboardHandler.cc  OSDLKeyboardHandler.h  OSDLMouse.cc  OSDLMouse.h  OSDLMouseCommon.cc  OSDLMouseCommon.h  OSDLMouseHandler.cc  OSDLMouseHandler.h
src/code/scripts/: Makefile.am
src/code/video/: Makefile.am  Makefile.cross  OSDLFromGfx.cc  OSDLFromGfx.h  OSDLOpenGL.cc  OSDLOpenGL.h  OSDLOverlay.cc  OSDLOverlay.h  OSDLPalette.cc  OSDLPalette.h  OSDLPixel.cc  OSDLPixel.h  OSDLSurface.cc  OSDLSurface.h  OSDLVideo.cc  OSDLVideo.h  OSDLVideoIncludes.h  OSDLVideoTypes.h
src/conf/: Makefile.am  OSDLSettings.inc  astyle.conf  generateBugReport.sh  osdl-valgrind-suppressions.txt  tidy.conf
src/conf/doc/: Makefile.am  astyle.conf  doxygen.conf.in  tidy.conf
src/doc/: GNUmakefile  GNUmakevars.inc  Makefile.am  OSDL-0.4-changes.txt  OSDL-0.4-release-notes.txt  OSDL-0.5-changes.txt  OSDL-0.5-release-notes.txt
src/doc/basic/: ChangeLog-to-keep  Makefile.am  OSDL-AUTHORS-template.txt.in  OSDL-COPYING.LIB-template.txt.in  OSDL-FAQ-template.txt.in  OSDL-INSTALL-template.txt.in  OSDL-LOANI-template.txt.in  OSDL-MAINTENERS-template.txt.in  OSDL-NEWS-template.txt.in  OSDL-README-template.txt.in  OSDL-THANKS-template.txt.in  OSDL-TODO-template.txt.in  OSDL-header-for-C.txt  OSDL-header-for-Erlang.txt  Orge-header-for-Erlang.txt
src/doc/web/: .htaccess  CVS-tester.txt  index-SF.html  index.html
test/: MakeConfigure  Makefile.am  autogen.sh  checkConfigure.sh  cleanGeneratedConfigFiles.sh  cleanTestGeneratedFiles.sh  configure-template.ac  playTests.sh  update-test-env.sh
test/audio/: Makefile.am  testOSDLAudio.cc  testOSDLMusic.cc  testOSDLSound.cc
test/audio/audioRenderer/: Makefile.am
test/audio/testOSDLAudio/: testOSDLAudio.vcproj
test/audio/testOSDLMusic/: testOSDLMusic.vcproj
test/audio/testOSDLSound/: testOSDLSound.vcproj
test/basic/: Makefile.am  create-testOSDLEmbeddedFileSystem-archive.sh  testBasic.cc  testOSDLBasic.cc  testOSDLCDROMDrive.cc  testOSDLEmbeddedFileSystem.cc  testOSDLException.cc  testOSDLGUI.cc  testOSDLUtils.cc  testSDL.cc  testSDLWithOpenGL.cc  testSDL_gfx.cc  testSDL_image.cc  testSDL_mixer.cc
test/basic/testBasic/: testBasic.vcproj
test/basic/testOSDLBasic/: testOSDLBasic.vcproj
test/basic/testOSDLCDROMDrive/: testOSDLCDROMDrive.vcproj
test/basic/testOSDLEmbeddedFileSystem/: testOSDLEmbeddedFileSystem.vcproj
test/basic/testOSDLException/: testOSDLException.vcproj
test/cross-tests/: GNUmakefile  OSDLDefaultMain.arm7.c  OSDLDefaultMain.arm7.cc  getMP3Settings.arm7.c  getMP3Settings.arm9.cc  testOSDLMusic.arm7.c  testOSDLMusic.arm9.cc  testOSDLSound.arm7.c  testOSDLSound.arm9.cc  testOSDLVideo.arm9.cc  testOSDLVideoFramebuffer.arm9.cc
test/data/: Makefile.am  testOSDLResourceManager.cc
test/engine/: Makefile.am  plotIdleCallDurations.p  testOSDLAndMVC.cc  testOSDLCircleBoundingBox.cc  testOSDLScheduledMVC.cc  testOSDLScheduledMultimedia.cc  testOSDLScheduledMultimediaRendering.cc  testOSDLScheduler.cc  testOSDLSchedulerNoDeadline.cc
test/events/: Makefile.am  testOSDLController.cc  testOSDLEvents.cc  testOSDLJoysticks.cc  testOSDLMouse.cc
test/video/: Makefile.am  testOSDLBlit.cc  testOSDLOpenGL.cc  testOSDLPalette.cc  testOSDLPixel.cc  testOSDLSurface.cc  testOSDLSurfacePrimitives.cc  testOSDLSurfaceTransformations.cc  testOSDLSurfaceTransforms.cc  testOSDLVideo.cc  testOSDLWindowManager.cc
tools/media/: Makefile.am  cypherOSDLFile.cc  identifyOSDLFile.cc  mp3ToOSDLMusic.cc  rawToOSDLSound.cc  wavToMP3ForDS.sh  wavToOSDLSound.cc  wavToOSDLSound.sh
tools/media/audio/: Makefile.am  (+4 more)
(+476 files in other folders)
