## Tests for the 'Audio' module of the OSDL library.


SUBDIRS = audioRenderer


testsaudiodir=@OSDL_TEST_DIR@/audio

testsaudio_CXXFLAGS = @AM_CXXFLAGS@

testsaudio_PROGRAMS = \
	testOSDLAudio.exe \
	testOSDLMusic.exe \
	testOSDLSound.exe
                           

testOSDLAudio_exe_SOURCES                  = testOSDLAudio.cc
testOSDLMusic_exe_SOURCES                  = testOSDLMusic.cc
testOSDLSound_exe_SOURCES                  = testOSDLSound.cc

