## Tests for the 'Basic' module of the OSDL library.


testsbasicdir=@OSDL_TEST_DIR@/basic

testsbasic_CXXFLAGS = @AM_CXXFLAGS@

testsbasic_PROGRAMS = \
	testBasic.exe                               \
	testOSDLBasic.exe                           \
	testOSDLCDROMDrive.exe                      \
	testOSDLException.exe                       \
	testSDL.exe                                 \
	testSDL_gfx.exe                             \
	testSDL_image.exe                           \
	testSDL_mixer.exe                           \
	testSDLWithOpenGL.exe
	

testBasic_SOURCES                        = testBasic.cc
testOSDLBasic_SOURCES                    = testOSDLBasic.cc
testOSDLCDROMDrive_SOURCES               = testOSDLCDROMDrive.cc
testOSDLException_SOURCES                = testOSDLException.cc
testSDL_SOURCES                          = testSDL.cc
testSDL_gfx_SOURCES                      = testSDL_gfx.cc
testSDL_image_SOURCES                    = testSDL_image.cc
testSDL_mixer_SOURCES                    = testSDL_mixer.cc
testSDLWithOpenGL_SOURCES                = testSDLWithOpenGL.cc

