## Tests for the 'Engine' module of the OSDL library.


testsenginedir=@OSDL_TEST_DIR@/engine

testsengine_CXXFLAGS = @AM_CXXFLAGS@

testsengine_PROGRAMS = \
	testOSDLAndMVC.exe                        \
	testOSDLCircleBoundingBox.exe             \
	testOSDLScheduledMultimediaRendering.exe  \
	testOSDLScheduler.exe                     \
	testOSDLSchedulerNoDeadline.exe           \
	testOSDLScheduledMVC.exe
	

testOSDLAndMVC_SOURCES                       = testOSDLAndMVC.cc
testOSDLCircleBoundingBox_SOURCES            = testOSDLCircleBoundingBox.cc
testOSDLScheduledMultimediaRendering_SOURCES = \
	testOSDLScheduledMultimediaRendering.cc
testOSDLScheduler_SOURCES                    = testOSDLScheduler.cc
testOSDLSchedulerNoDeadline_SOURCES          = testOSDLSchedulerNoDeadline.cc
testOSDLScheduledMVC_SOURCES                 = testOSDLScheduledMVC.cc
