## Tests for the 'Engine' module of the OSDL library.


testsenginedir=@OSDL_TEST_DIR@/engine

testsengine_CXXFLAGS = @AM_CXXFLAGS@

testsengine_PROGRAMS = \
	testOSDLAndMVC.exe                        \
	testOSDLCircleBoundingBox.exe             \
	testOSDLScheduledMultimedia.exe           \
	testOSDLScheduler.exe                     \
	testOSDLSchedulerNoDeadline.exe           \
	testOSDLScheduledMVC.exe
	

testOSDLAndMVC_exe_SOURCES                       = testOSDLAndMVC.cc
testOSDLCircleBoundingBox_exe_SOURCES            = testOSDLCircleBoundingBox.cc
testOSDLScheduledMultimedia_exe_SOURCES = \
	testOSDLScheduledMultimedia.cc
testOSDLScheduler_exe_SOURCES                    = testOSDLScheduler.cc
testOSDLSchedulerNoDeadline_exe_SOURCES          = \
	testOSDLSchedulerNoDeadline.cc
testOSDLScheduledMVC_exe_SOURCES                 = testOSDLScheduledMVC.cc
