## Tests for the 'Events' module of the OSDL library.


testseventsdir=@OSDL_TEST_DIR@/events

testsevents_CXXFLAGS = @AM_CXXFLAGS@

testsevents_PROGRAMS = \
	testOSDLController.exe               \
	testOSDLEvents.exe                   \
	testOSDLJoysticks.exe


testOSDLController_SOURCES = testOSDLController.cc
testOSDLEvents_SOURCES        = testOSDLEvents.cc
testOSDLJoysticks_SOURCES = testOSDLJoysticks.cc
